[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/sprites/environment/zones/shop/shop_zone_h.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/5Âž5.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/delivery/delivery_hub.gd" type="Script" id=3]
[ext_resource path="res://src/environment/zoneglow.tres" type="Animation" id=4]
[ext_resource path="res://src/environment/zonefade_in.tres" type="Animation" id=5]
[ext_resource path="res://assets/sprites/environment/zones/pickup/pickup_zone_h.png" type="Texture" id=6]
[ext_resource path="res://src/environment/zonefade_out.tres" type="Animation" id=7]
[ext_resource path="res://src/environment/zonehidden.tres" type="Animation" id=8]
[ext_resource path="res://src/ui/FloatingLabel.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 48, 32 )

[sub_resource type="DynamicFont" id=6]
size = 24
outline_size = 2
outline_color = Color( 1, 0.698039, 0.964706, 1 )
extra_spacing_char = 4
extra_spacing_space = 1
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=7]
resource_name = "shop_fade_in"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("PickupZone/ShopZoneSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PickupZone/ShopLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PickupZone/ShopLabel:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.707, 1 ),
"update": 0,
"values": [ Vector2( -57, -10 ), Vector2( -57, -14 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "shop_fade_out"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("PickupZone/ShopZoneSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PickupZone/ShopLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PickupZone/ShopLabel:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 2.54, 1 ),
"update": 0,
"values": [ Vector2( -57, -14 ), Vector2( -57, -10 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "shop_glow"
length = 1.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PickupZone/ShopZoneSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.7, 1, 1.3 ),
"transitions": PoolRealArray( 1.56, 0.435, 1, 1.68, 0.435, 1.46 ),
"update": 0,
"values": [ Color( 0.705882, 0.392157, 0.682353, 1 ), Color( 0.996078, 0.52549, 0.988235, 1 ), Color( 1, 0.698039, 0.964706, 1 ), Color( 1, 0.698039, 0.964706, 1 ), Color( 0.996078, 0.52549, 0.988235, 1 ), Color( 0.705882, 0.392157, 0.682353, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PickupZone/ShopLabel:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.7, 1, 1.3 ),
"transitions": PoolRealArray( 1.56, 0.435, 1, 1.68, 0.435, 1 ),
"update": 0,
"values": [ Vector2( -57, -14 ), Vector2( -57, -16 ), Vector2( -57, -20 ), Vector2( -57, -20 ), Vector2( -57, -16 ), Vector2( -57, -14 ) ]
}

[node name="DeliveryHub" type="Node2D"]
pause_mode = 2
script = ExtResource( 3 )

[node name="PickupZone" type="Area2D" parent="."]
position = Vector2( 0, -47 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupZone"]
visible = false
position = Vector2( 0, 48 )
shape = SubResource( 1 )

[node name="DeliveryZoneSprite" type="Sprite" parent="PickupZone"]
modulate = Color( 0.172549, 0.717647, 0.807843, 0 )
position = Vector2( -7.62939e-06, 48 )
texture = ExtResource( 6 )

[node name="Pickuplabel" parent="PickupZone" instance=ExtResource( 9 )]
modulate = Color( 1, 1, 1, 0 )
margin_top = -16.4514
margin_bottom = 10.5486
custom_colors/font_color_shadow = Color( 0.172549, 0.717647, 0.807843, 1 )

[node name="ShopZoneSprite" type="Sprite" parent="PickupZone"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, 48 )
texture = ExtResource( 1 )

[node name="ShopLabel" type="Label" parent="PickupZone"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -57.0
margin_top = -14.0556
margin_right = 57.0
margin_bottom = 12.9444
custom_colors/font_color = Color( 0.996078, 0.52549, 0.988235, 1 )
custom_colors/font_color_shadow = Color( 0.705882, 0.392157, 0.682353, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 6 )
text = "Shop"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "pickup_glow"
anims/hidden = ExtResource( 8 )
anims/pickup_fade_in = ExtResource( 5 )
anims/pickup_fade_out = ExtResource( 7 )
anims/pickup_glow = ExtResource( 4 )
anims/shop_fade_in = SubResource( 7 )
anims/shop_fade_out = SubResource( 8 )
anims/shop_glow = SubResource( 9 )

[connection signal="body_entered" from="PickupZone" to="." method="_on_PickupZone_body_entered"]
[connection signal="body_exited" from="PickupZone" to="." method="_on_PickupZone_body_exited"]
